--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+@font-face {
+  font-family: MessinaSans;
+  src: url(./fonts/MessinaSans-Light.woff);
+}
+
+@font-face {
+  font-family: MessinaSans;
+  src: url(./fonts/MessinaSans-Bold.woff);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: MessinaSans;
+  src: url(./fonts/MessinaSans-LightItalic.woff);
+  font-style: italic;
+}
+
 * {
-  color: black;
+  color: #1b1d20;
+  font-family: MessinaSans, sans-serif;
   box-sizing: border-box;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 ul {
@@ -13,15 +31,48 @@ a {
 }
 
 body {
+  margin: 0px;
   display: flex;
+}
+
+aside ul {
+  margin: 0;
+  width: 220px;
+  height: 100%;
+  padding: 30px;
+  padding-top: 80px;
+  border-right: 1px solid #1b1d20;
+  background: #f9fafb;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .header-links {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  padding-left: 200px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #1b1d20;
   display: flex;
+  gap: 100px;
 }
 
 .content {
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+
+article {
+  padding: 0;
+  padding-left: 200px;
+}
+
+.title {
+  font-size: 60px;
 }
