--- a/style.css
+++ b/style.css
@@ -35,17 +35,26 @@ body {
   display: flex;
 }
 
-aside ul {
+.sidebar-links {
   margin: 0;
   width: 220px;
   height: 100%;
   padding: 30px;
-  padding-top: 80px;
+  padding-top: 85px;
   border-right: 1px solid #1b1d20;
   background: #f9fafb;
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 7px;
+}
+
+.novel-links {
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
 }
 
 .header-links {
@@ -71,6 +80,8 @@ aside ul {
 article {
   padding: 0;
   padding-left: 200px;
+  display: flex;
+  flex-direction: column wrap;
 }
 
 .title {
