--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: MessinaSans;
-  src: url(/fonts/MessinaSans-Light.woff);
+  src: url(../fonts/MessinaSans-Light.woff);
 }
 
 @font-face {
   font-family: MessinaSans;
-  src: url(/fonts/MessinaSans-Bold.woff);
+  src: url(../fonts/MessinaSans-Bold.woff);
   font-weight: bold;
 }
 
 @font-face {
   font-family: MessinaSans;
-  src: url(/fonts/MessinaSans-LightItalic.woff);
+  src: url(../fonts/MessinaSans-LightItalic.woff);
   font-style: italic;
 }
 
@@ -19,6 +19,8 @@
   color: #1b1d20;
   font-family: MessinaSans, sans-serif;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   /* border: 2px solid red; */
 }
 
@@ -30,6 +32,7 @@ a {
   text-decoration: none;
 }
 
+/* Sidebar */
 .sidebar-links a:hover {
   color: #929dad;
 }
@@ -39,12 +42,17 @@ body {
   display: flex;
 }
 
+aside {
+  height: 100vh;
+}
+
 .sidebar-links {
   margin: 0;
+  padding: 0;
+  padding-top: 86px;
+  padding-left: 30px;
   width: 220px;
   height: 100%;
-  padding: 30px;
-  padding-top: 85px;
   border-right: 1px solid #1b1d20;
   background: #f9fafb;
   display: flex;
@@ -61,6 +69,8 @@ body {
   gap: 7px;
 }
 
+/* Header */
+
 .header-links {
   margin: 0;
   padding: 0;
@@ -73,19 +83,15 @@ body {
   gap: 100px;
 }
 
+/* Content */
 .content {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
+  width: 100%;
 }
-
 article {
+  max-width: 800px;
   padding: 0;
-  padding-left: 200px;
-  display: flex;
-  flex-direction: column wrap;
+  padding-left: 50px;
+  padding-top: 20px;
 }
 
 .title {
