--- a/css/novel-1.css
+++ b/css/novel-1.css
@@ -50,7 +50,7 @@ aside {
   margin: 0;
   padding: 0;
   padding-top: 86px;
-  padding-left: 30px;
+  padding-left: 40px;
   width: 220px;
   height: 100%;
   border-right: 1px solid #1b1d20;
@@ -70,14 +70,13 @@ aside {
 }
 
 /* Header */
-
 .header-links {
   margin: 0;
   padding: 0;
   font-size: 20px;
   padding-left: 200px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 18px;
+  padding-bottom: 18px;
   border-bottom: 1px solid #1b1d20;
   display: flex;
   gap: 100px;
@@ -87,13 +86,16 @@ aside {
 .content {
   width: 100%;
 }
+
 article {
   max-width: 800px;
   padding: 0;
   padding-left: 50px;
-  padding-top: 20px;
+  padding-top: 60px;
 }
 
+.current-page {
+}
 .title {
   font-size: 60px;
 }
