Convert styling of sidebar from px->rem

--- a/css/novel-1.css
+++ b/css/novel-1.css
@@ -38,7 +38,7 @@ a {
 }
 
 body {
-  margin: 0px;
+  margin: 0;
   display: flex;
 }
 
@@ -49,15 +49,15 @@ aside {
 .sidebar-links {
   margin: 0;
   padding: 0;
-  padding-top: 86px;
-  padding-left: 40px;
-  width: 220px;
+  padding-top: 3.5rem;
+  padding-left: 2rem;
+  width: 12rem;
   height: 100%;
   border-right: 1px solid #1b1d20;
   background: #f9fafb;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 0.3rem;
 }
 
 .novel-links {
