--- a/css/novel-1.css
+++ b/css/novel-1.css
@@ -73,13 +73,13 @@ aside {
 .header-links {
   margin: 0;
   padding: 0;
-  font-size: 20px;
-  padding-left: 200px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  border-bottom: 1px solid #1b1d20;
+  font-size: 1.1rem;
+  padding-left: 10rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 0.0056rem solid #1b1d20;
   display: flex;
-  gap: 100px;
+  gap: 5.5rem;
 }
 
 /* Content */
