--- a/css/index.css
+++ b/css/index.css
@@ -38,56 +38,48 @@ a {
 }
 
 body {
-  margin: 0px;
+  margin: 0;
   display: flex;
 }
 
 aside {
-  height: 100vh;
+  border-right: 1px solid #1b1d20;
+  background: #f9fafb;
+  padding-top: 3.5rem;
+  padding-left: 2rem;
+  max-width: 12rem;
 }
 
 .sidebar-links {
-  margin: 0;
-  padding: 0;
-  padding-top: 86px;
-  padding-left: 30px;
-  width: 220px;
-  height: 100%;
-  border-right: 1px solid #1b1d20;
-  background: #f9fafb;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 0.3rem;
 }
 
 .novel-links {
   margin: 0;
   padding: 0;
-  padding-left: 20px;
+  padding-left: 1.2em;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 0.3rem;
 }
 
 /* Header */
 .header-links {
   margin: 0;
   padding: 0;
-  font-size: 20px;
-  padding-left: 200px;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  border-bottom: 1px solid #1b1d20;
+  font-size: 1.1rem;
+  padding-left: 10rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 0.0056rem solid #1b1d20;
   display: flex;
-  gap: 100px;
+  gap: 5.5rem;
 }
 
-/* Content */
-.content {
-  width: 100%;
-}
+
 article {
-  max-width: 800px;
   padding: 0;
   padding-left: 50px;
   padding-top: 20px;
