--- a/css/index.css
+++ b/css/index.css
@@ -81,10 +81,10 @@ aside {
 
 article {
   padding: 0;
-  padding-left: 50px;
-  padding-top: 20px;
+  padding-left: 2.8rem;
+  padding-top: 1.1rem;
 }
 
 .title {
-  font-size: 60px;
+  font-size: 3.3rem;
 }
