--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -32,10 +32,11 @@ a {
   text-decoration: none;
 }
 
-/* Sidebar */
-.sidebar-links a:hover {
+a:hover {
   color: #929dad;
 }
+
+/* Sidebar */
 
 body {
   margin: 0;
