--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -48,7 +48,10 @@ aside {
   background: #f9fafb;
   padding-top: 3.5rem;
   padding-left: 2rem;
+  padding-right: 1rem;
   max-width: 12rem;
+  display: flex;
+  flex-shrink: 0;
 }
 
 .sidebar-links {
