--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -88,9 +88,7 @@ aside {
 } */
 
 main {
-  padding: 0;
-  padding-left: 2.7rem;
-  padding-top: 3.3rem;
+  padding: 3.3rem 4rem 0 4rem;
 }
 
 /* .directory {
