--- a/css/index.css
+++ b/css/index.css
@@ -90,9 +90,20 @@ main {
 .title {
   font-size: 3.3rem;
 }
+.series-container {
+  display: flex;
+  align-items: center;
+  gap: 4.2rem;
+}
 
 .series-container img {
   width: 30.6rem;
   height: 16.4rem;
   object-fit: cover;
+  flex-shrink: 0;
+}
+
+.description {
+  flex-shrink: 0;
+  width: 30.6rem;
 }
