--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@
 }
 
 * {
-  color: #1b1d20;
+  color: #1D1E1F;
   font-family: MessinaSans, sans-serif;
   box-sizing: border-box;
   margin: 0;
@@ -42,7 +42,7 @@ body {
 }
 
 aside {
-  border-right: 1px solid #1b1d20;
+  border-right: 1px solid #1D1E1F;
   background: #f9fafb;
   padding-top: 3.5rem;
   padding-left: 2rem;
@@ -75,12 +75,12 @@ aside {
   padding-left: 10rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 0.0056rem solid #1b1d20;
+  border-bottom: 0.0056rem solid #1D1E1F;
   display: flex;
   gap: 5.5rem;
 }
 
-
+/* Content */
 main {
   margin: 0 auto;
   max-width: 70rem;
@@ -122,6 +122,16 @@ main {
   width: 18.3rem;
   object-fit: cover;
   flex-shrink: 0;
+}
+
+.newcomer-container {
+  background-color: #1b1d20;
+  display: flex;
+  padding: 5.5rem;
+}
+
+.newcomer-container.description {
+  color: white;
 }
 
 
