Center newcomer children

--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,8 @@ main {
 .newcomer-container {
   background-color: #1b1d20;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 5.5rem;
 }
 
