Add initial styling to footer Adding background color, padding and links styling.

--- a/css/index.css
+++ b/css/index.css
@@ -156,3 +156,14 @@ main {
   color: white;
 }
 
+/* Footer */
+footer{
+  padding: 3rem 0;
+  background-color: gray;
+  text-align: center;
+}
+
+footer p {
+  color: white;
+  display: inline-block;
+}
