--- a/css/index.css
+++ b/css/index.css
@@ -160,12 +160,11 @@ main {
   display: inline-block;
   font-size: 1rem;
   cursor: pointer;
-  transition-duration: 0.4s;
 }
 
 .read-button:hover {
-  background-color: #1b1d20;
-  border: 1px solid white;
+  background-color: gray;
+  /* border: 1px solid white; */
   color: white;
 }
 
