--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -90,7 +90,8 @@ aside {
 
 main {
   margin: 0 auto;
-  max-width: 70%;
+  max-width: 95%;
+  width: 55rem;
   /* padding: 3.3rem 4rem 0 4rem; */
 }
 
