Edit novel description styling Remove gap from novel description styling. Add line height of 1.2.

--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -40,6 +40,7 @@ a:hover {
 
 body {
   margin: 0;
+  line-height: 1.2;
   display: flex;
 }
 
@@ -153,7 +154,6 @@ main {
 }
 
 .novel-description {
-  gap: 1.1rem;
   display: flex;
   flex-direction: column;
 }
