--- a/css/novels.css
+++ b/css/novels.css
@@ -80,6 +80,14 @@
     gap: 4.5rem;
   }
 
+main {
+  margin: 0 auto;
+  max-width: 95%;
+  width: 55rem;
+  /* padding: 3.3rem 4rem 0 4rem; */
+}
+
+
   /* Breadcrumb */
 .breadcrumbs {
   display: flex;
