--- a/css/novels.css
+++ b/css/novels.css
@@ -1,84 +1,93 @@
 @font-face {
-    font-family: MessinaSans;
-    src: url(../fonts/MessinaSans-Light.woff);
-  }
-  
-  @font-face {
-    font-family: MessinaSans;
-    src: url(../fonts/MessinaSans-Bold.woff);
-    font-weight: bold;
-  }
-  
-  @font-face {
-    font-family: MessinaSans;
-    src: url(../fonts/MessinaSans-LightItalic.woff);
-    font-style: italic;
-  }
-  
-  * {
-    color: #1D1E1F;
-    font-family: MessinaSans, sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    /* border: 2px solid red; */
-  }
-  
-  ul {
-    list-style-type: none;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: #4b6584;
-  }
-  
-  body {
-    margin: 0;
-    display: flex;
-  }
-  
-  aside {
-    border-right: 1px solid #1D1E1F;
-    background: #f9fafb;
-    padding-top: 3.5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    max-width: 13.5rem;
-    display: flex;
-    flex-shrink: 0;
-  }
-  
-  .sidebar-links {
-    display: flex;
-    flex-direction: column;
-    gap: 0.6rem;
-  }
-  
-  .novel-links {
-    margin: 0;
-    padding: 0;
-    padding-left: 1.2em;
-    display: flex;
-    flex-direction: column;
-    gap: 0.6rem;
-  }
-  
-  /* Header */
-  .header-links {
-    margin: 0;
-    padding: 0;
-    font-size: 1rem;
-    padding-left: 10rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    border-bottom: 0.0056rem solid #1D1E1F;
-    display: flex;
-    gap: 4.5rem;
-  }
+  font-family: MessinaSans;
+  src: url(../fonts/MessinaSans-Light.woff);
+}
+
+@font-face {
+  font-family: MessinaSans;
+  src: url(../fonts/MessinaSans-Bold.woff);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: MessinaSans;
+  src: url(../fonts/MessinaSans-LightItalic.woff);
+  font-style: italic;
+}
+
+* {
+  color: #1b1d20;
+  font-family: MessinaSans, sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* border: 2px solid red; */
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #4b6584;
+}
+
+/* Sidebar */
+
+body {
+  margin: 0;
+  line-height: 1.2;
+  display: flex;
+}
+
+aside {
+  border-right: 1px solid #1b1d20;
+  background: #f9fafb;
+  padding-top: 3.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  max-width: 13.5rem;
+  display: flex;
+  flex-shrink: 0;
+}
+
+.sidebar-links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
+
+.novel-links {
+  margin: 0;
+  padding: 0;
+  padding-left: 1.2em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
+
+/* Header */
+.header-links {
+  margin: 0;
+  margin-bottom: 2rem;
+  padding: 0;
+  font-size: 1.1rem;
+  padding-left: 10rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 0.0056rem solid #1b1d20;
+  display: flex;
+  gap: 4.5rem;
+}
+
+/* Content */
+/* .content {
+  width: 100%;
+} */
 
 main {
   margin: 0 auto;
@@ -87,8 +96,16 @@ main {
   /* padding: 3.3rem 4rem 0 4rem; */
 }
 
+/* .directory {
+  color: #705429;
+}
 
-  /* Breadcrumb */
+/* mark {
+  background-color: transparent;
+  color: #705429;
+} */
+
+/* Breadcrumb */
 .breadcrumbs {
   display: flex;
   gap: 0.2rem;
