--- a/css/novels.css
+++ b/css/novels.css
@@ -112,7 +112,6 @@ main {
 }
 
 /* Translated section */
-
 .section-title {
   font-size: 1.5rem;
   font-weight: 700;
@@ -126,6 +125,13 @@ main {
  
 .col-md-4 {
   width: 15%; /* Adjusting how much space the thumbnail takes up in relation to the card container */
+}
+
+.card.mb-3 {
+  padding: 1rem;
+  border-left: none;
+  border-right: none;
+  border-radius: 0;
 }
 
 /* Footer */
