--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,12 @@ aside {
 }
 
 /* Header */
+header {
+  display: flex;
+  border-bottom: 1px solid #1D1E1F;
+  align-items: center;
+}
+
 .header-links {
   margin: 0;
   padding: 0;
@@ -75,7 +81,6 @@ aside {
   padding-left: 10rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  border-bottom: 0.0056rem solid #1D1E1F;
   display: flex;
   gap: 4.5rem;
 }
