--- a/css/boogiepop-and-others.css
+++ b/css/boogiepop-and-others.css
@@ -71,17 +71,28 @@ aside {
 }
 
 /* Header */
-.header-links {
-  margin: 0;
-  margin-bottom: 2rem;
-  padding: 0;
-  font-size: 1.1rem;
-  padding-left: 10rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 0.0056rem solid #1b1d20;
+header {
   display: flex;
-  gap: 4.5rem;
+  border-bottom: 1px solid #1D1E1F;
+  height: 4rem;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.header-logo {
+  position: absolute;
+  left: 3%
+}
+
+.header-links {
+  margin-left: 20%;
+  padding: 0;
+  font-size: 1.15rem;
+  display: flex;
+}
+
+.header-links p {
+  padding: 0 2rem;
 }
 
 /* Content */
