--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ a:hover {
 
 body {
   margin: 0;
+  line-height: 1.4;
   display: flex;
 }
 
@@ -61,6 +62,15 @@ aside {
   flex-direction: column;
   gap: 0.6rem;
 }
+
+/* .novel-links {
+  margin: 0;
+  padding: 0;
+  padding-left: 1.2em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+} */
 
 /* Header */
 header {
